server/zenith/test/snapshots/tests__users__get_authenticated_user.snap
---
source: server/zenith/test/users.rs
expression: "app.get(\"/users/me\").await"
---
{
  "id": 1,
  "username": "test"
}
