server/zenith/test/snapshots/tests__users__get_authenticated_user_with_auth_header.snap
---
source: server/zenith/test/users.rs
expression: res
---
[
  {
    "id": 1,
    "username": "test"
  }
]
