server/zenith/test/snapshots/tests__users__get_users.snap
---
source: server/zenith/test/users.rs
expression: "app.get(\"/users\").await"
---
[
  {
    "id": 1,
    "username": "test"
  },
  {
    "id": 2,
    "username": "test2"
  }
]
