server/zenith/test/snapshots/tests__users__get_users_unauthenticated.snap
---
source: server/zenith/test/users.rs
expression: res
---
[
  {
    "id": 1,
    "username": "test"
  },
  {
    "id": 2,
    "username": "test2"
  }
]
